fix: fall back font to Noto Sans TC

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>JCI North District - Save the Dates</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
   <style>
     body {
-      font-family: "Zen Maru Gothic", serif;
+      font-family: "Zen Maru Gothic", "Noto Sans TC", serif;
       margin: 0;
       padding: 20px;
       background-color: #f5f5f5;
