--- a/index.html
+++ b/index.html
@@ -212,8 +212,15 @@
             location: "沙田馬埸"
           },
           {
-            date: "22/3",
-            day: "六",
+            date: "23/3",
+            day: "日",
+            time: "10:00 - 12:00",
+            name: "電影欣賞 - 孤獨的美食家",
+            location: ["MCL K11 Art House", "尖沙咀 K11 Musea L4 樓層(港鐵尖東站J出口)"]
+          },
+          {
+            date: "23/3",
+            day: "日",
             time: "",
             name: "北務正業 - 養蜂業編",
             location: ["寶生園", "(新界粉嶺蝴蝶山路8號)"]
