--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
           {
             date: "27/3",
             day: "四",
-            time: "",
-            name: "三月月會",
-            location: "待定"
+            time: "19:30 - 22:00",
+            name: "三月月會 - 發掘你的MBTI潛能",
+            location: "尖沙咀 好兆年行"
           }
         ];
 
