--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           {
             date: "23/3",
             day: "日",
-            time: "",
+            time: "14:00 - 16:00",
             name: "北務正業 - 養蜂業編",
             location: ["寶生園", "(新界粉嶺蝴蝶山路8號)"]
           },
@@ -230,7 +230,7 @@
             day: "四",
             time: "19:30 - 22:00",
             name: "三月月會 - 發掘你的MBTI潛能",
-            location: "尖沙咀 好兆年行"
+            location: ["尖沙咀好兆年行一期1208室"]
           }
         ];
 
