--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             date: "27/3",
             day: "四",
             time: "19:30 - 22:00",
-            name: "三月月會 - 發掘你的MBTI潛能",
+            name: "三月月會 - \n發掘你的MBTI潛能",
             location: ["尖沙咀好兆年行一期1208室"]
           }
         ];
