--- a/index.html
+++ b/index.html
@@ -193,46 +193,39 @@
 
       <script>
         // Configuration
-        const monthRange = "三月";
-        
-        // Events data array - modify this to update events
-        const events = [
-          {
-            date: "1/3",
-            day: "六",
-            time: "14:00 - 17:00",
-            name: "(與城市青年商會合辦) \n創意青年企業家研討會 (Creative Young Entrepreneur Workshop)",
-            location: "上環總會會址"
-          },
-          {
-            date: "15/3",
-            day: "六",
-            time: "12:00 - 18:00",
-            name: "資深青商會聯誼活動 - 沙田馬場貴賓室自助午餐聚會",
-            location: "沙田馬埸"
-          },
-          {
-            date: "23/3",
-            day: "日",
-            time: "10:00 - 12:00",
-            name: "電影欣賞 - 孤獨的美食家",
-            location: ["MCL K11 Art House", "尖沙咀 K11 Musea L4 樓層(港鐵尖東站J出口)"]
-          },
-          {
-            date: "23/3",
-            day: "日",
-            time: "14:00 - 16:00",
-            name: "北務正業 - 養蜂業編",
-            location: ["寶生園", "(新界粉嶺蝴蝶山路8號)"]
-          },
-          {
-            date: "27/3",
-            day: "四",
-            time: "19:30 - 22:00",
-            name: "三月月會 - \n發掘你的MBTI潛能",
-            location: ["尖沙咀好兆年行一期1208室"]
-          }
-        ];
+const monthRange = "四月";
+
+// Events data array - updated for April 2025 events
+const events = [
+  {
+    date: "2/4",
+    day: "三",
+    time: "09:00 - 10:30",
+    name: "疊出耆跡 - 疊杯訓練日",
+    location: "樂暉傲創 九龍灣彩福邨彩樂樓地下"
+  },
+  {
+    date: "15/4",
+    day: "二",
+    time: "待定",
+    name: "會長飯局",
+    location: "地點待訂"
+  },
+  {
+    date: "24/4",
+    day: "四",
+    time: "19:30 - 22:00",
+    name: "四月月會",
+    location: "地點待訂"
+  },
+  {
+    date: "30/4",
+    day: "三",
+    time: "09:00 - 10:30",
+    name: "疊出耆跡 - 疊杯訓練日",
+    location: "樂暉傲創 九龍灣彩福邨彩樂樓地下"
+  }
+];
 
         // Helper function to escape HTML
         function escapeHTML(str) {
