--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ const events = [
     date: "30/4",
     day: "三",
     time: "09:00 - 10:30",
-    name: "疊出耆跡 - 疊杯訓練日",
+    name: "疊出耆跡 - 活動日",
     location: "樂暉傲創 九龍灣彩福邨彩樂樓地下"
   }
 ];
