--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@ const events = [
     day: "二",
     time: "待定",
     name: "會長飯局",
-    location: "地點待訂"
+    location: "地點待定"
   },
   {
     date: "24/4",
     day: "四",
     time: "19:30 - 22:00",
     name: "四月月會",
-    location: "地點待訂"
+    location: "地點待定"
   },
   {
     date: "30/4",
